UI fixing for comments section on mobile

--- a/src/HomePage/home.css
+++ b/src/HomePage/home.css
@@ -319,6 +319,7 @@ form .chip:hover {
   .dashboardContainer .detailCol {
     position: absolute;
     top: 60%;
+    width: 100%;
   }
 
   .scrollView {
